--- a/OmneFictio.Web/wwwroot/css/site.scss
+++ b/OmneFictio.Web/wwwroot/css/site.scss
@@ -266,7 +266,7 @@ header {
     }
 
     .dw-icon-cont {
-        width: 2.4rem;
+        padding-right: 14px;
 
         i {
             font-size: 1.4rem;
