--- a/OmneFictio.Web/Views/Home/Chapter.cshtml
+++ b/OmneFictio.Web/Views/Home/Chapter.cshtml
@@ -9,9 +9,9 @@
     }
 }
 @{
-    string? userId = User.FindFirst("nameid")?.Value ?? null;
-    string? username = User.FindFirst("unique_name")?.Value ?? null;
-    string? userPicture = User.FindFirst("actort")?.Value ?? null;
+    string? userId = User.FindFirst("nameid")?.Value;
+    string? username = User.FindFirst("unique_name")?.Value;
+    string? userPicture = User.FindFirst("actort")?.Value;
 }
 <template id="chapter_instance">
     <div class="ch-header">
