--- a/OmneFictio.Web/Views/Home/Index.cshtml
+++ b/OmneFictio.Web/Views/Home/Index.cshtml
@@ -11,9 +11,9 @@
     }
 }
 @{
-    string? userId = User.FindFirst("nameid")?.Value ?? null;
-    string? username = User.FindFirst("unique_name")?.Value ?? null;
-    string? userPicture = User.FindFirst("actort")?.Value ?? null;
+    string? userId = User.FindFirst("nameid")?.Value;
+    string? username = User.FindFirst("unique_name")?.Value;
+    string? userPicture = User.FindFirst("actort")?.Value;
 }
 <!--
 <div><span>User ID and Username:</span>
