--- a/OmneFictio.Web/Views/Profile/Profile.cshtml
+++ b/OmneFictio.Web/Views/Profile/Profile.cshtml
@@ -10,9 +10,9 @@
     }
 }
 @{
-    string? userId = User.FindFirst("nameid")?.Value ?? null;
-    string? username = User.FindFirst("unique_name")?.Value ?? null;
-    string? userPicture = User.FindFirst("actort")?.Value ?? null;
+    string? userId = User.FindFirst("nameid")?.Value;
+    string? username = User.FindFirst("unique_name")?.Value;
+    string? userPicture = User.FindFirst("actort")?.Value;
 }
 <template id="profileInfoInstance">
     <div class="profile_details">
